Fixed flex layout problem (thanks to Amit!)

--- a/11.2.24 - Lesson 10/shopping-cart/src/app/products/product-list/product-list.component.css
+++ b/11.2.24 - Lesson 10/shopping-cart/src/app/products/product-list/product-list.component.css
@@ -3,16 +3,12 @@
     display: flex;
 }
 
-.flex div:nth-child(1) {
-    flex-basis: 40%;
-}
-
 
 /* PRODUCT GALLERY */
 .product-gallery {
     width: 700px;
     display: flex;
-    justify-content: space-between;
+    align-items: baseline;
     flex-wrap: wrap;
 }
 
@@ -21,7 +17,8 @@
 }
 
 .product-item img {
-    width: 100px;
+   width: 100px;
+
 }
 
 
